# test_myrouter_ReRoute

./: .gitignore  CMakeLists.txt  CriticalNetOptimizer.cpp  CriticalNetOptimizer.h  EDCompute.cpp  EDCompute.h  ExperimentConfig.cpp  ExperimentConfig.h  ExperimentSummaryWriter.cpp  ExperimentSummaryWriter.h  Grid.cpp  Grid.h  HBTResourceManager.cpp  HBTResourceManager.h  LibertyData.cpp  LibertyData.h  NetInfoWriter.cpp  NetInfoWriter.h  NetReRoute.cpp  NetReRoute.h  NetReRoute2D.cpp  NetReRoute2D.h  NetReRoute3D.cpp  NetReRoute3D.h  PDTreeRouter.cpp  PDTreeRouter.h  Parser.cpp  Parser.h  PlotDataWriter.cpp  PlotDataWriter.h  RCDefaults.cpp  RCDefaults.h  RouteTopologyValidator.cpp  RouteTopologyValidator.h  RouterDB.cpp  RouterDB.h  TimingAnnotator.cpp  TimingAnnotator.h  VerilogNetlist.cpp  VerilogNetlist.h  (+1 more)
configs/: 00_baseline_rc_only.json  01_proposed_default.json  02_ablation_no_hbt_net_penalty.json  03_hbt_conservative.json  04_timing_aggressive.json  05_high_hbt_rc.json  06_low_hbt_rc.json  07_wire_delay_dominant.json  08_parent_load_dominant.json  09_no_stretch_penalty.json  10_high_stretch_penalty.json  11_high_sink_cap.json  12_low_sink_cap.json  13_top_rc_high.json  14_bottom_rc_high.json  15_traditional_pdtree.json  16_proposed_with_2d_plots.json  README_experiment_matrix.md  baseline_no_reroute.json  debug_force_cross_die_detour.json  debug_hbt_force.json  edcompute_only_00_default_hbt_rc.json  edcompute_only_01_high_hbt_rc_100x.json  edcompute_only_02_low_hbt_rc_0p01x.json  edcompute_only_03_near_zero_hbt_rc.json  reroute_cross_die_detour.json  reroute_cross_die_detour_smoke_test.json  reroute_cross_die_optimize.json  reroute_edge_relocation.json  reroute_hbt_topology.json  reroute_hbt_topology_optimize.json  reroute_reattach_only.json  stage2_00_baseline_no_reroute.json  (+21 more)
(+15 files in other folders)
